--- a/index.html
+++ b/index.html
@@ -1,14 +1,12 @@
 <!DOCTYPE html>
-<html>
-  <head>
-    <link rel="stylesheet" href="styles.css" />
-    <link
-      rel="stylesheet"
-      href="https://use.fontawesome.com/releases/v5.8.1/css/all.css"
-      integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf"
-      crossorigin="anonymous"
-    />
-  </head>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Specialty Coffee</title>
+    <link rel="stylesheet" href="styles.css">
+</head>
   <body>
     <div id="page-wrapper">
       <header id="header">
@@ -77,16 +75,17 @@
             </div>
           </div>
         </section>
-        <section id="about__us">
+
+            <div class="video">
           <iframe id="video" height="315" width="640" src="https://www.youtube.com/embed/FM5_NoXW2Y0" title="Everything You've Ever Wanted To Know About Coffee" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-        </section>
-        <section id="pricing">
+        
+          <section id="pricing">
           <div class="product" id="tenor">
             <div class="level">Top Seller #1</div>
             <h2>$25</h2>
             <ol>
               <li>Ethiopia Buna Roma</li>
-              <br>
+              <br></br>
               <li>nectarine, white grapes, red plum, caramel</li>
               <li>250 g</li>
             </ol>
@@ -98,7 +97,7 @@
             <ol>
               <li>Rwanda Kyoto</li>
               <li>peach, raspberry, red berries, caramel</li>
-              <br>
+              <br></br>
               <li>500 g</li>
             </ol>
             <button class="btn">add to basket</button>
@@ -125,5 +124,5 @@
         </footer>
       </div>
     </div>
-  </body>
+   </body>
 </html>
