--- a/index.html
+++ b/index.html
@@ -5,7 +5,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Specialty Coffee</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="styles.css" />
+    <link
+      rel="stylesheet"
+      href="https://use.fontawesome.com/releases/v5.8.1/css/all.css"
+      integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf"
+      crossorigin="anonymous">
 </head>
   <body>
     <div id="page-wrapper">
@@ -14,8 +19,7 @@
           <img
             id="header-img"
             src="https://flomaster.club/uploads/posts/2022-06/1654830926_20-flomaster-club-p-meshok-risunok-karandashom-krasivo-33.jpg"
-            alt="original trombones logo"
-          />
+            alt="original trombones logo"/>
         </div>
 
         <nav id="nav-bar">
@@ -75,11 +79,10 @@
             </div>
           </div>
         </section>
-
+        
             <div class="video">
           <iframe id="video" height="315" width="640" src="https://www.youtube.com/embed/FM5_NoXW2Y0" title="Everything You've Ever Wanted To Know About Coffee" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-        
-          <section id="pricing">
+        <section id="pricing">
           <div class="product" id="tenor">
             <div class="level">Top Seller #1</div>
             <h2>$25</h2>
